--- a/src/app/components/navbar2/navbar2.component.css
+++ b/src/app/components/navbar2/navbar2.component.css
@@ -7,7 +7,7 @@
   font-family: 'Poppins', sans-serif;
 }
 body{
-   background: linear-gradient(135deg, rgb(121,120,120), #f0b851);
+  background: #f2f2f2;
 }
 nav{
   background: #FFA500;
