--- a/src/app/components/registrer/registrer.component.css
+++ b/src/app/components/registrer/registrer.component.css
@@ -52,7 +52,7 @@ form .user-details .input-box{
 form .input-box span.details{
   display: block;
   font-weight: 500;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .user-details .input-box input{
@@ -62,7 +62,7 @@ form .input-box span.details{
   font-size: 16px;
   border-radius: 5px;
   padding-left: 15px;
-  border: 1px solid #ccc;
+  border: 1px solid #d9d9d9;
   border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
