--- a/src/app/components/tableau/tableau.component.html
+++ b/src/app/components/tableau/tableau.component.html
@@ -7,36 +7,35 @@
     <title>Tableau</title>
 </head>
 <body>
-    <header>
-      <app-navbar></app-navbar>
-    </header>
+  <app-navbar2></app-navbar2>
+
     <main>
       <div class="card" style="padding: 30px;">
         <form #registerForm="ngForm" (ngSubmit)="register(registerForm)">
           <div class="user-details">
             <div class="input-box">
               <span class="details">Nom :</span>
-              <input type="text" placeholder="Entrer votre nom" #nom (ngModel)="nom" name="nom" id="nom" >
+              <input type="text" placeholder="Entrer votre nom" #nom (ngModel)="nom" name="nom" id="nom" required >
             </div>
             <div class="input-box">
               <span class="details">Prénom :</span>
-              <input type="text" placeholder="Entrer votre prénom" #prenom (ngModel)="prenom" name="prenom" id="prenom">
+              <input type="text" placeholder="Entrer votre prénom" #prenom (ngModel)="prenom" name="prenom" id="prenom" required>
             </div>
             <div class="input-box">
               <span class="details">Email :</span>
-              <input type="email"  placeholder="Entrer votre email" #email (ngModel)="email" name="email" id="email">
+              <input type="email"  placeholder="Entrer votre email" #email (ngModel)="email" name="email" id="email" required>
             </div>
             <div class="input-box">
               <span class="details">Numéro apogée :</span>
-              <input type="number" placeholder="Entrer votre numéro apogée" #num (ngModel)="num" name="num" id="num">
+              <input type="number" placeholder="Entrer votre numéro apogée" #num (ngModel)="num" name="num" id="num" required>
             </div>
             <div class="input-box">
               <span class="details">Mot de passe :</span>
-              <input type="password" placeholder="Entrer votre mot de passe" #motdepasse (ngModel)="motdepasse" name="motdepasse" id="motdepasse">
+              <input type="password" placeholder="Entrer votre mot de passe" #motdepasse (ngModel)="motdepasse" name="motdepasse" id="motdepasse" required>
             </div>
             <div class="input-box">
               <span class="details">Confirmer mot de passe :</span>
-              <input type="password" placeholder="Confirmer votre mot de passe" #cfmotpasse (ngModel)="cfmotpasse" name="cfmotpasse" id="cfmotpasse">
+              <input type="password" placeholder="Confirmer votre mot de passe" #cfmotpasse (ngModel)="cfmotpasse" name="cfmotpasse" id="cfmotpasse" required>
             </div>
           </div>
           <div class="button" >
@@ -86,32 +85,32 @@
                   <div class="form-group">
                     <label for="nom">Nom :</label>
                     <input type="text"  #nom [(ngModel)]="studentToUpdate.nom" name="nom" id="nom"
-                      class="form-control" placeholder="Entrer votre Nom">
+                      class="form-control" placeholder="Entrer votre Nom" required>
                   </div>
                   <div class="form-group">
                     <label for="prenom">Prénom :</label>
                     <input type="text" #prenom [(ngModel)]="studentToUpdate.prenom" name="prenom" id="name" class="form-control"
-                      placeholder="Entrer votre Prenom">
+                      placeholder="Entrer votre Prenom" required>
                   </div>
                   <div class="form-group">
                     <label for="num">Numéro Apogée :</label>
                     <input type="number" #num [(ngModel)]="studentToUpdate.num" name="num" id="num" class="form-control"
-                      placeholder="Entrer votre Numéro Apogée ">
+                      placeholder="Entrer votre Numéro Apogée " required>
                   </div>
                   <div class="form-group">
                     <label for="email">Email :</label>
                     <input type="email" #email [(ngModel)]="studentToUpdate.email" name="email" id="email" class="form-control"
-                     placeholder="Entrer votre Email">
+                     placeholder="Entrer votre Email" required>
                   </div>
                   <div class="form-group">
                     <label for="motdepasse">Mot de passe :</label>
                     <input type="password" #motdepasse [(ngModel)]="studentToUpdate.motdepasse" name="motdepasse" id="motdepasse"
-                      class="form-control" placeholder="Entrer votre Mot de passe">
+                      class="form-control" placeholder="Entrer votre Mot de passe" required>
                   </div>
                   <div class="form-group">
                     <label for="cfmotpasse">Confirmer mot de passe :</label>
                     <input type="password" #cfmotpasse [(ngModel)]="studentToUpdate.cfmotpasse" name="cfmotpasse" id="cfmotpasse"
-                      class="form-control" placeholder="Confirmer votre Mot de passe">
+                      class="form-control" placeholder="Confirmer votre Mot de passe" required>
                   </div>
                   <div class="form-group">
                     <input style="margin-top: 8px;" type="submit" value="Modifier" class="btn btn-warning w-100">
