--- a/src/app/components/cfilieres/cfilieres.component.css
+++ b/src/app/components/cfilieres/cfilieres.component.css
@@ -4,6 +4,7 @@ body {
 body {
 	font-family: 'Poppins', sans-serif;
 	color: #fff;
+	background: linear-gradient(135deg, rgb(121,120,120), #f0b851);
 }
 
 section{
