--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
    <body>
       <nav>
          <div class="logo" ><a routerLink="/logina">
-            <img src="../../../assets/photos/IMG_6409.jpg" width="130px" height="70px" id=logo alt="Logo image" style="margin-left: 70px;" />
+            <img src="../../../assets/photos/yas Png.png" width="153px" height="70px" id=logo alt="Logo image" style="margin-left: -60px;margin-top: -5px;" />
            </a>
          </div>
          <label for="btn" class="icon">
