--- a/src/app/components/registrer/registrer.component.css
+++ b/src/app/components/registrer/registrer.component.css
@@ -39,6 +39,11 @@ body{
   border-radius: 5px;
   background: linear-gradient(135deg, rgb(121,120,120), #FFA500);
 }
+.alert{
+  margin:10px;
+  width: 630px;
+  height: 40px;
+}
 .content form .user-details{
   display: flex;
   flex-wrap: wrap;
@@ -52,7 +57,7 @@ form .user-details .input-box{
 form .input-box span.details{
   display: block;
   font-weight: 500;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .user-details .input-box input{
@@ -62,7 +67,7 @@ form .input-box span.details{
   font-size: 16px;
   border-radius: 5px;
   padding-left: 15px;
-  border: 1px solid #d9d9d9;
+  border: 1px solid #ccc;
   border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
