--- a/src/app/components/cfilieres/cfilieres.component.html
+++ b/src/app/components/cfilieres/cfilieres.component.html
@@ -59,7 +59,7 @@
                     <figure class="card" routerLink="#" >
                         <img src="../../../assets/photos/sv.png" alt="" class="card__image" />
                         <figcaption class="card__body">
-                        <h3 class="card__title">Sciences de la Vie (SVI) </h3> 
+                        <h3 class="card__title">Sciences de la Vie <br> (SVI) </h3> 
                         </figcaption>
                     </figure>
 				</div>
