--- a/src/app/components/navbar2/navbar2.component.html
+++ b/src/app/components/navbar2/navbar2.component.html
@@ -8,8 +8,7 @@
 <body>
    <nav>
       <div class="logo" ><a routerLink="/logina">
-         <img src="../../../assets/photos/IMG_6409.jpg" width="130px" height="70px" id=logo alt="Logo image" style="margin-left: 70px;" />
-        </a>
+         <img src="../../../assets/photos/yas Png.png" width="153px" height="70px" id=logo alt="Logo image" style="margin-left: -60px;margin-top: -5px;" /></a>
       </div>
       <label for="btn" class="icon">
       <span class="fa fa-bars"></span>
