--- a/src/app/components/registrer/registrer.component.html
+++ b/src/app/components/registrer/registrer.component.html
@@ -12,62 +12,55 @@
 </header>
 <body>
   <div class="container">
-    <div class="title">S'inscrire</div>
     <div class="content">
-      <form action="#"  [formGroup]="registerForm" (ngSubmit)="register()">
+      <form [formGroup]="registerF" (ngSubmit)="register()">
+        <div class="title">S'inscrire</div>
+        <div *ngIf="alert" class="alert alert-success alert-dismissible" role="alert" style="padding-top: 10px !important; padding-left: 10px;">
+          <strong>Succès !</strong> Votre message a été envoyé avec succès.
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" style="margin-bottom: 15px;"></button>
+        </div>
         <div class="user-details">
-          <div class="input-box"  >
-            <span class="details">Nom </span>
-            <input type="text" type="text" formControlName="nom" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.nom.errors }"  placeholder="Entrer votre nom"   name="nom" id="nom"  required> 
-            <div *ngIf="submitted && f.nom.errors" class="invalid-feedback">
-              <div *ngIf="f.nom.errors.required">nom is required</div>
+          <div class="input-box">
+            <span class="details">Nom</span>
+            <input type="text" placeholder="Entrer votre nom" formControlName="nom">
+            <small class="form-text text-muted" *ngIf="registerF.get('nom')?.touched && registerF.get('nom')?.invalid" style="color: red !important;">Nom est requis.</small>
           </div>
-          </div>
-          <div class="input-box" >
+          <div class="input-box">
             <span class="details">Prénom</span>
-            <input type="text" placeholder="Entrer votre prénom" formControlName="prenom" class="form-control" [ngClass]="{'is-invalid': submitted && f.prenom.errors }"   name="prenom" id="prenom" required>
-            <div *ngIf="submitted && f.prenom.errors" class="invalid-feedback">
-             <div *ngIf="f.prenom.errors.required">prenom is required</div>
+            <input type="text" placeholder="Entrer votre prénom" formControlName="prenom">
+            <small class="form-text text-muted" *ngIf="registerF.get('prenom')?.touched && registerF.get('prenom')?.invalid" style="color: red !important;">Prénom est requis.</small>
           </div>
-            
-          </div>
-          <div class="input-box" >
+          <div class="input-box">
             <span class="details">Email</span>
-            <input type="email" placeholder="Entrer votre email" formControlName="email" name="email" id="email" [ngClass]="{'is-invalid': submitted && f.email.errors }" required>
-            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-              <div *ngIf="f.email.errors.required">email is required</div>
-              <div *ngIf="f.email.errors.pattern">email must be ....@etu.uae.ac.ma</div>
+            <input type="email" placeholder="Entrer votre email" formControlName="email"
+              pattern="^[a-zA-Z0-9._%+-]+@\etu\.uae\.ac\.ma$">
+            <small class="form-text text-muted" *ngIf="registerF.get('email')?.touched && registerF.get('email')?.invalid && !registerF.get('email')?.errors?.['pattern']" style="color: red !important;">Email est requis.</small>
+            <small class="form-text text-muted" *ngIf="registerF.get('email')?.touched && registerF.get('email')?.errors?.['pattern']" style="color: red !important;">Email invalide.</small>
           </div>
-          </div>
-          <div class="input-box" >
+          
+          <div class="input-box">
             <span class="details">Numéro apogée</span>
-            <input type="number" placeholder="Entrer votre numéro apogée"  formControlName="num" class="form-control" [ngClass]="{'is-invalid': submitted && f.num.errors }"  name="num" id="num" required>
-            <div *ngIf="submitted && f.num.errors" class="invalid-feedback">
-              <div *ngIf="f.num.errors.required">Num is required</div>
-              <div *ngIf="f.num.errors.minlength">Num must be 6 numbers</div>
+            <input type="number" placeholder="Entrer votre numéro apogée" formControlName="num">
+            <small class="form-text text-muted" *ngIf="registerF.get('num')?.touched && registerF.get('num')?.invalid" style="color: red !important;">Numéro apogée est requis.</small>
           </div>
-          </div>
-          <div class="input-box" >
+          <div class="input-box">
             <span class="details">Mot de passe</span>
-            <input type="password" placeholder="Entrer votre mot de passe" formControlName="motdepasse" class="form-control" [ngClass]="{'is-invalid': submitted && f.motdepasse.errors }"   name="motdepasse" id="motdepasse" required>
-            <div *ngIf="submitted && f.motdepasse.errors" class="invalid-feedback">
-              <div *ngIf="f.motdepasse.errors.required">Password is required</div>
-              <div *ngIf="f.motdepasse.errors.minlength">Password must be at least 6 characters</div>
+            <input type="password" placeholder="Entrer votre mot de passe" formControlName="motdepasse">
+            <small class="form-text text-muted" *ngIf="registerF.get('motdepasse')?.touched && registerF.get('motdepasse')?.invalid" style="color: red !important;">Mot de passe est requis.</small>
           </div>
-          </div>
-          <div class="input-box" >
+          <div class="input-box">
             <span class="details">Confirmer mot de passe</span>
-            <input type="password" placeholder="Confirmer votre mot de passe" formControlName="cfmotpasse" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.cfmotpasse.errors }" name="cfmotpasse" id="cfmotpasse" required >
-            <div *ngIf="submitted && f.cfmotpasse.errors" class="invalid-feedback">
-              <div *ngIf="f.cfmotpasse.errors.required">Confirm Password is required</div>
-              <div *ngIf="f.cfmotpasse.errors.mustMatch">Passwords must match</div>
+            <input type="password" placeholder="Confirmer votre mot de passe" formControlName="cfmotpasse">
+            <small class="form-text text-muted" *ngIf="registerF.get('cfmotpasse')?.touched && registerF.get('cfmotpasse')?.invalid" style="color: red !important;">Confirmer mot de passe est requis.</small>
+            <small class="form-text text-muted" *ngIf="registerF.hasError('passwordMismatch')" style="color: red !important;">Le mot de passe et la confirmation du mot de passe ne correspondent pas.</small>
           </div>
-          </div>
+          
+          
         </div>
-        <div class="button" >
-          <input type="submit"  value="S'inscrire" >
+        <div class="button">
+          <input type="submit" value="S'inscrire" [disabled]="registerF.invalid">
         </div>
-        <div class="signup-link">  <a routerLink="/login">Se connecter</a></div>
+        <div class="signup-link"><a routerLink="/login">Se connecter</a></div>
       </form>
       
     </div>
