--- a/src/app/components/navbar2/navbar2.component.html
+++ b/src/app/components/navbar2/navbar2.component.html
@@ -15,7 +15,7 @@
       </label>
       <input type="checkbox" id="btn">
       <ul>
-         <li><a routerLink="/espacea" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
+         <li><a routerLink="/tableaup" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
          <li><a routerLink="/tableau"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >ETUDIANT</a></li>
          <li><a routerLink="/tableaucontac"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >MESSAGE</a></li>
       </ul>
