--- a/src/app/components/logina/logina.component.html
+++ b/src/app/components/logina/logina.component.html
@@ -23,10 +23,10 @@
           </div>
           <div class="content">
             <div class="checkbox">
-              <input type="checkbox" id="remember-me">
-              <label for="remember-me">Se souvenir de moi</label>
+              <!-- <input type="checkbox" id="remember-me"> -->
+              <!-- <label for="remember-me">Se souvenir de moi</label> -->
             </div>
-            <div class="pass-link"><a routerLink="/mpoublier">Mot de passe oublié ?</a></div>
+            <!-- <div class="pass-link"><a routerLink="/mpoublier">Mot de passe oublié ?</a></div> -->
           </div>
           <div class="field">
             <input type="submit" value="Se Connecter">
