--- a/src/app/components/registrer/registrer.component.css
+++ b/src/app/components/registrer/registrer.component.css
@@ -109,22 +109,28 @@ form .input-box span.details{
    display: none;
  }
  form .button{
-   height: 45px;
-   margin: 35px 0
+  height: 50px;
+  width: 100%;
+  margin-top: 25px;
+  position: relative;
  }
  form .button input{
-   height: 100%;
-   width: 100%;
-   border-radius: 5px;
-   border: none;
-   color: #fff;
-   font-size: 18px;
-   font-weight: 500;
-   letter-spacing: 1px;
-   cursor: pointer;
-   transition: all 0.3s ease;
+  height: 100%;
+  width: 100%;
+  outline: none;
+  font-size: 17px;
+  padding-left: 20px;
+  border: 1px solid lightgrey;
+  border-radius: 25px;
+  transition: all 0.3s ease;
+  height: 50px;
+  color: #fff;
+  width: 100%;
+  margin-top: 20px;
+  position: relative;
    background: linear-gradient(135deg, #FFA500, #FFA500);
  }
+ 
  form .button input:hover{
   /* transform: scale(0.99); */
   background: linear-gradient(-135deg, rgb(121,120,120), #FFA500);
