--- a/src/app/components/tableau-p/tableau-p.component.html
+++ b/src/app/components/tableau-p/tableau-p.component.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tableau</title>
 </head>
-<body>
+<body> <app-navbar2></app-navbar2>
     <main>
       <div class="card" style="padding: 30px;">
         <form #registerForm="ngForm" (ngSubmit)="registerProf(registerForm)">
