--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -79,10 +79,10 @@
     font-size: 15px;
     padding: 10px;
     outline: none;
-    min-width: 600px;
+     min-width: 600px;
     max-width: 600px;
     min-height: 80px;
-    max-height: 80px;
+    max-height: 80px; 
 }
 
 textarea::-webkit-scrollbar{
@@ -111,4 +111,67 @@ textarea::-webkit-scrollbar-thumb{
 .container1 form #button:hover{
     opacity: 0.7;
     background-image: linear-gradient(to right, #FFA500  0%, rgb(121,120,120) 100%);
-}
+}/* Default styles */
+
+/* Add your default styles here */
+
+/* Media queries for different screen sizes */
+
+/* Small devices (up to 576px) */
+@media (max-width: 576px) {
+    .container-text h1 {
+      font-size: 40px;
+    }
+    
+    .description-photo {
+      flex-direction: column;
+      height: auto;
+    }
+    
+    .desc {
+      width: 100%;
+      margin-top: 20px;
+      font-size: 100%;
+    }
+    
+    #list {
+      margin-left: 0;
+    }
+    
+    .follow {
+      height: 10vh;
+    }
+  }
+  
+  /* Medium devices (between 576px and 992px) */
+  @media (min-width: 576px) and (max-width: 992px) {
+    .container-text h1 {
+      font-size: 48px;
+    }
+    
+    .description-photo {
+      height: auto;
+    }
+    
+    .desc {
+      margin-top: 20px;
+    }
+    
+    #list {
+      margin-left: 0;
+    }
+    
+    .follow {
+      height: 10vh;
+    }
+  }
+  
+  /* Large devices (992px and above) */
+  @media (min-width: 992px) {
+    .container-text h1 {
+      font-size: 56px;
+    }
+    
+    /* Add any additional styles for larger screens here */
+  }
+  
