--- a/src/app/components/mpoublier/mpoublier.component.css
+++ b/src/app/components/mpoublier/mpoublier.component.css
@@ -1,31 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-body{
+
+body {
   display: grid;
-  height: 145%;
+  height: 100%;
   width: 100%;
   place-items: center;
-  background: linear-gradient(135deg, rgb(121,120,120), #f0b851);
+  background: linear-gradient(135deg, rgb(121, 120, 120), #f0b851);
 }
-::selection{
+
+::selection {
   background: #FFA500;
-  color:#fff;
+  color: #fff;
 }
-.wrapper{
-  width: 500px;
+
+.wrapper {
+  width: 90%;
+  max-width: 500px;
   background: #fff;
   border-radius: 15px;
-  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
-  margin-top: 6.3%;
-  margin-bottom: 12%;
-  height: 65%;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
+  margin-top: 4.74%;
+  margin-bottom: 9.9%;
+  height: 64%;
 }
-.wrapper .title{
+
+.wrapper .title {
   font-size: 35px;
   font-weight: 600;
   text-align: center;
@@ -33,35 +39,21 @@ body{
   color: #fff;
   user-select: none;
   border-radius: 15px 15px 0 0;
-  background:  #FFA500;
-}form .field input[type="Submit"]{
-  color: #fff;
-  border: none;
-  padding-left: 0;
-  margin-top: -10px;
-  font-size: 20px;
-  font-weight: 500;
-  cursor: pointer;
-  background: linear-gradient(-135deg,#FFA500, #FFA500);
-  transition: all 0.3s ease;
+  background: #FFA500;
 }
-form .field input[type="Submit"]:hover{
-  background: linear-gradient(-135deg, rgb(121,120,120), #FFA500);
 
-}
-form .field input[type="submit"]:active{
-  transform: scale(0.95);
-}
-.wrapper form{
+.wrapper form {
   padding: 0px 30px 50px 30px;
 }
-.wrapper form .field{
-  height: 60px;
+
+.wrapper form .field {
+  height: 50px;
   width: 100%;
-  margin-top: 35px;
+  margin-top: 25px;
   position: relative;
 }
-.wrapper form .field input{
+
+.wrapper form .field input {
   height: 100%;
   width: 100%;
   outline: none;
@@ -71,11 +63,13 @@ form .field input[type="submit"]:active{
   border-radius: 25px;
   transition: all 0.3s ease;
 }
+
 .wrapper form .field input:focus,
-form .field input:valid{
+form .field input:valid {
   border-color: #FFA500;
 }
-.wrapper form .field label{
+
+.wrapper form .field label {
   position: absolute;
   top: 50%;
   left: 20px;
@@ -86,18 +80,53 @@ form .field input:valid{
   transform: translateY(-50%);
   transition: all 0.3s ease;
 }
+
 form .field input:focus ~ label,
-form .field input:valid ~ label{
+form .field input:valid ~ label {
   top: 0%;
   font-size: 16px;
-  color: #4158d0;
+  color: #FFA500;
   background: #fff;
   transform: translateY(-50%);
 }
 
-form .field input[type="Submit"]{
+form .content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  height: 50px;
+  font-size: 16px;
+  align-items: center;
+  margin-top: 5%;
+}
+
+form .content .checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+form .content input {
+  width: 15px;
+  height: 15px;
+  background: red;
+}
+
+form .content label {
+  color: #262626;
+  user-select: none;
+  padding-left: 5px;
+}
+
+form .content .pass-link {
+  color: "";
+}
+
+form .field input[type="submit"] {
   color: #fff;
   border: none;
+  
   padding-left: 0;
   margin-top: -10px;
   font-size: 20px;
