--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,11 +22,7 @@
             <label>Mot de passe</label>
           </div>
           <div class="content">
-            <div class="checkbox">
-              <input type="checkbox" id="remember-me">
-              <label for="remember-me">Se souvenir de moi</label>
-            </div>
-            <div class="pass-link"><a routerLink="/mpoublier">Mot de passe oublié ?</a></div>
+            <div class="pass-link"(click)="handleForgetPasswordAction()">Mot de passe oublié ?</div> <!--(click)="handleForgetPasswordAction()"-->
           </div>
           <div class="field">
             <input type="submit" value="Se Connecter">
