--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -93,7 +93,7 @@ form .field input:valid ~ label {
 form .content {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   height: 50px;
   font-size: 16px;
