--- a/src/app/components/mpoublier/mpoublier.component.css
+++ b/src/app/components/mpoublier/mpoublier.component.css
@@ -1,3 +1,15 @@
+/*.mat-toolbar{
+  margin: -24px;
+  margin-bottom: 10px;
+  width: auto;
+
+}
+mat-form-field{
+  padding: 5px;
+}*/
+
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 * {
@@ -26,9 +38,9 @@ body {
   background: #fff;
   border-radius: 15px;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
-  margin-top: 4.74%;
-  margin-bottom: 9.9%;
-  height: 64%;
+  margin-top: 8%;
+  margin-bottom: 10%;
+  height: 60%;
 }
 
 .wrapper .title {
@@ -49,7 +61,7 @@ body {
 .wrapper form .field {
   height: 50px;
   width: 100%;
-  margin-top: 25px;
+  margin-top: 40px;
   position: relative;
 }
 
@@ -95,7 +107,7 @@ form .content {
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
-  height: 50px;
+  height: 60px;
   font-size: 16px;
   align-items: center;
   margin-top: 5%;
@@ -126,7 +138,7 @@ form .content .pass-link {
 form .field input[type="submit"] {
   color: #fff;
   border: none;
-  
+  text-align: center;
   padding-left: 0;
   margin-top: -10px;
   font-size: 20px;
