--- a/src/app/components/loginp/loginp.component.css
+++ b/src/app/components/loginp/loginp.component.css
@@ -26,9 +26,9 @@ body {
   background: #fff;
   border-radius: 15px;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
-  margin-top: 4.74%;
-  margin-bottom: 9.9%;
-  height: 64%;
+  margin-top: 7.6%;
+  margin-bottom: 10%;
+  height: 65%;
 }
 
 .wrapper .title {
@@ -93,12 +93,13 @@ form .field input:valid ~ label {
 form .content {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   height: 50px;
   font-size: 16px;
   align-items: center;
   margin-top: 5%;
+  text-align: center;
 }
 
 form .content .checkbox {
@@ -125,8 +126,7 @@ form .content .pass-link {
 
 form .field input[type="submit"] {
   color: #fff;
-  border: none;
-  
+  border: none; 
   padding-left: 0;
   margin-top: -10px;
   font-size: 20px;
